--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
@@ -69,8 +69,7 @@
     "    second_position = int(row_parts[0].split(\"-\")[1])\n",
     "    policy_character = row_parts[1][0]\n",
     "    password = row_parts[2]\n",
-    "    if password[first_position - 1] == policy_character != password[second_position - 1] or \\\n",
-    "            password[first_position - 1] != policy_character == password[second_position - 1]:\n",
+    "    if (password[first_position - 1] == policy_character) != (policy_character == password[second_position - 1]):\n",
     "        valid_passwords_part_2.append(password)\n",
     "\n",
     "print(f\"Number of valid password for part2: {len(valid_passwords_part_2)}\")"
