Add more functional solution for part 1

--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -72,8 +72,68 @@
     "    if (password[first_position - 1] == policy_character) != (policy_character == password[second_position - 1]):\n",
     "        valid_passwords_part_2.append(password)\n",
     "\n",
-    "print(f\"Number of valid password for part2: {len(valid_passwords_part_2)}\")"
+    "print(f\"Number of valid password for part2: {len(valid_passwords_part_2)}\")\n",
+    "\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "#Improved solution\n",
+    "\n",
+    "def is_valid_password(row: str) -> str:\n",
+    "    row_parts = row.split(\" \")\n",
+    "    min_policy = int(row_parts[0].split(\"-\")[0])\n",
+    "    max_policy = int(row_parts[0].split(\"-\")[1])\n",
+    "    policy_character = row_parts[1][0]\n",
+    "    password = row_parts[2]\n",
+    "    password_parts_counter = Counter(password)\n",
+    "    if  min_policy <= password_parts_counter[policy_character] <= max_policy:\n",
+    "        return password"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of valid passwords for part 1: 474\n"
+     ]
+    }
+   ],
+   "source": [
+    "valid_passwords_part_1_2 = list(filter(lambda x: x,map(is_valid_password, day2_input)))\n",
+    "print(f\"Number of valid passwords for part 1: {len(valid_passwords_part_1_2)}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
