Add functional solution for part 2

--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
@@ -84,17 +84,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "outputs": [],
    "source": [
-    "#Improved solution\n",
-    "\n",
-    "def is_valid_password(row: str) -> str:\n",
+    "def parse_row(row: str) -> [str, int, int, str]:\n",
     "    row_parts = row.split(\" \")\n",
     "    min_policy = int(row_parts[0].split(\"-\")[0])\n",
     "    max_policy = int(row_parts[0].split(\"-\")[1])\n",
     "    policy_character = row_parts[1][0]\n",
-    "    password = row_parts[2]\n",
+    "    return row_parts[2], min_policy, max_policy, policy_character"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [],
+   "source": [
+    "#Improved solution part 1\n",
+    "\n",
+    "def is_valid_password(row: str) -> str:\n",
+    "    password, min_policy, max_policy, policy_character = parse_row(row)\n",
     "    password_parts_counter = Counter(password)\n",
     "    if  min_policy <= password_parts_counter[policy_character] <= max_policy:\n",
     "        return password"
@@ -108,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
@@ -119,8 +134,51 @@
     }
    ],
    "source": [
+    "# Part 1\n",
     "valid_passwords_part_1_2 = list(filter(lambda x: x,map(is_valid_password, day2_input)))\n",
     "print(f\"Number of valid passwords for part 1: {len(valid_passwords_part_1_2)}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "# Part 2\n",
+    "def is_valid_password_2(row: str) -> str:\n",
+    "    password, first_position, second_position, policy_character = parse_row(row)\n",
+    "    if (password[first_position - 1] == policy_character) != (policy_character == password[second_position - 1]):\n",
+    "        return password"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of valid password for part2: 745\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Part 2\n",
+    "valid_passwords_part_2_2 = list(filter(lambda  x: x,map(is_valid_password_2, day2_input)))\n",
+    "print(f\"Number of valid password for part2: {len(valid_passwords_part_2)}\")\n"
    ],
    "metadata": {
     "collapsed": false,
