--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -2,27 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Read input\n",
+    "from functools import reduce\n",
     "from typing import List\n",
-    "\n",
-    "day_3_input = []\n",
-    "\n",
-    "with open(\"Input/Day3.txt\") as file:\n",
-    "    day_3_input = [list(row[:-1]) for row in file.readlines()]"
+    "def read_input() -> List:\n",
+    "    # Important!!! Input file must contain '\\n' in the last line\n",
+    "    with open(\"Input/Day3.txt\") as file:\n",
+    "        return [list(row[:-1]) for row in file.readlines()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "# Part 1\n",
     "def mark_tree(row: List, x_coord: int) -> List:\n",
     "    if row[x_coord] == '#':\n",
     "        row[x_coord] = 'X'\n",
@@ -39,14 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "forest_marked = [day_3_input[0]]\n",
-    "x_coordinate = 0\n",
-    "for row in day_3_input[1:]:\n",
-    "    x_coordinate = (x_coordinate + 3 ) % len(row)\n",
-    "    forest_marked.append(mark_tree(row, x_coordinate))"
+    "def mark_forest(vertical_slope: int, horizontal_slope: int, forest: List) -> List:\n",
+    "    marked_forest = []\n",
+    "    x_coordinate = 0\n",
+    "    for row in forest[::vertical_slope]:\n",
+    "        x_coordinate = x_coordinate % len(row)\n",
+    "        marked_forest.append(mark_tree(row, x_coordinate))\n",
+    "        x_coordinate = x_coordinate + horizontal_slope\n",
+    "    return marked_forest"
    ],
    "metadata": {
     "collapsed": false,
@@ -57,7 +59,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "def count_trees(slope: tuple) -> int:\n",
+    "    day_3_input = read_input()\n",
+    "    forest = mark_forest(horizontal_slope=slope[0], vertical_slope=slope[1], forest=day_3_input)\n",
+    "    forest_counted = list(map(Counter, forest))\n",
+    "    return sum(map(lambda x: x['X'], forest_counted))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -68,11 +89,9 @@
     }
    ],
    "source": [
-    "from collections import Counter\n",
-    "\n",
-    "forest_counted = list(map(Counter, forest_marked))\n",
-    "trees_counted = sum(map(lambda x: x['X'], forest_counted))\n",
-    "\n",
+    "# Part 1\n",
+    "slope_part1 = (3,1)\n",
+    "trees_counted = count_trees(slope=slope_part1)\n",
     "print(f\"Number of trees: {trees_counted}\")"
    ],
    "metadata": {
@@ -84,7 +103,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result for muliplied number of trees on each slope: 6419669520\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Part 2\n",
+    "\n",
+    "slopes = [(1,1), (3,1), (5,1), (7,1), (1,2)]\n",
+    "tress_counted_list = list(map(count_trees, slopes))\n",
+    "all_trees_counter = reduce(lambda x,y: x * y, tress_counted_list)\n",
+    "\n",
+    "print(f\"Result for muliplied number of trees on each slope: {all_trees_counter}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
