Add day5 part 2 and update read_input function

--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -11,7 +11,10 @@
     "def read_input():\n",
     "    with open(\"Input/Day5.txt\") as file:\n",
     "        # Input has to contain blank line at the end\n",
-    "        return [line[:-1] for line in file.readlines()]\n",
+    "        raw_input =  file.readlines()\n",
+    "        parsed_input = [line[:-1] for line in raw_input[:-1]]\n",
+    "        parsed_input.append(raw_input[-1])\n",
+    "        return parsed_input\n",
     "\n",
     "input_day5 = read_input()"
    ]
@@ -61,7 +64,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "# Part 2\n",
+    "seat_ids_list = list(map(find_seat_id, input_day5))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "def find_missing_seat(seats_list: List) -> int:\n",
+    "    seats_list.sort(key=lambda x: x)\n",
+    "    for i in range(len(seats_list)-1):\n",
+    "        diff = seats_list[i+1] - seats_list[i]\n",
+    "        if diff > 1:\n",
+    "            return seats_list[i+1] - 1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My seat id is : 717\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing_seat = find_missing_seat(seat_ids_list)\n",
+    "print(f\"My seat id is : {missing_seat}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
