Improve part1 and add part 2

--- a/Day6.ipynb
+++ b/Day6.ipynb
@@ -9,7 +9,6 @@
    "outputs": [],
    "source": [
     "from collections import Counter\n",
-    "from typing import List\n",
     "def read_input():\n",
     "    with open(\"Input/Day6.txt\") as file:\n",
     "        file_input = file.readlines()\n",
@@ -37,18 +36,14 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "# Part 1\n",
+    "# Group answers\n",
     "\n",
-    "def collect_group_answers(group_answers: List) -> List:\n",
-    "    group_answers_list = []\n",
-    "    group_answer = \"\"\n",
-    "    for answer in group_answers:\n",
-    "        if len(answer) == 0:\n",
-    "            group_answers_list.append(group_answer)\n",
-    "            group_answer = \"\"\n",
-    "        group_answer = group_answer + answer\n",
-    "    group_answers_list.append(group_answer)\n",
-    "    return group_answers_list"
+    "blank_indexes = [x for x, z in enumerate(input_day6) if z == '']\n",
+    "blank_indexes.insert(0,-1)\n",
+    "\n",
+    "group_indexes = list(zip(blank_indexes[:-1], blank_indexes[1:]))\n",
+    "groups = [input_day6[start+1:end] for (start, end) in group_indexes]\n",
+    "groups.append(input_day6[group_indexes[-1][1]+1:])"
    ],
    "metadata": {
     "collapsed": false,
@@ -62,20 +57,12 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "group_answers = collect_group_answers(input_day6)"
+    "# Part 1\n",
+    "group_answers = [\"\".join(group) for group in groups]\n",
+    "\n",
+    "count_group_answers = list(map(Counter, group_answers))\n",
+    "count_sum = sum([len(count_group_answer.keys()) for count_group_answer in count_group_answers])"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -86,10 +73,17 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of counts is: 6534\n"
+     ]
+    }
+   ],
    "source": [
-    "count_group_answers = list(map(Counter, group_answers))\n",
-    "count_sum = sum([len(count_group_answer.keys()) for count_group_answer in count_group_answers])"
+    "print(f\"The sum of counts is: {count_sum}\")\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -106,12 +100,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of counts is: 6534\n"
+      "Result: 3402\n"
      ]
     }
    ],
    "source": [
-    "print(f\"The sum of counts is: {count_sum}\")\n"
+    "# Part 2\n",
+    "group_answers_with_size = list(zip(count_group_answers,map(len, groups)))\n",
+    "group_answers_everyone = []\n",
+    "for group in group_answers_with_size:\n",
+    "    group_counter = group[0]\n",
+    "    group_size = group[1]\n",
+    "    [group_answers_everyone.append(key) for key in group_counter.keys() if group_counter[key] == group_size]\n",
+    "print(f\"Result: {len(group_answers_everyone)}\")"
    ],
    "metadata": {
     "collapsed": false,
