Refactor arguments of get_accumulator

--- a/Day8.ipynb
+++ b/Day8.ipynb
@@ -19,10 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "def get_accumulator(instruction: dict, index: int = 0 ,accumulator: int = 0) -> int:\n",
+    "# Part 1\n",
+    "def get_accumulator(index: int = 0 ,accumulator: int = 0) -> int:\n",
+    "    instruction = instructions[index]\n",
     "    if instruction[\"is_visited\"]:\n",
     "        return accumulator\n",
     "\n",
@@ -33,13 +35,13 @@
     "    if command == \"acc\":\n",
     "        accumulator += argument\n",
     "        next_index = index+1\n",
-    "        return get_accumulator(instruction = instructions[next_index],index=next_index, accumulator = accumulator)\n",
+    "        return get_accumulator(index=next_index, accumulator = accumulator)\n",
     "    elif command == \"jmp\":\n",
     "        next_index = index + argument\n",
-    "        return get_accumulator(instruction = instructions[next_index], index=next_index, accumulator = accumulator)\n",
+    "        return get_accumulator(index=next_index, accumulator = accumulator)\n",
     "    else:\n",
     "        next_index = index + 1\n",
-    "        return get_accumulator(instruction = instructions[next_index], index=next_index, accumulator = accumulator)"
+    "        return get_accumulator(index=next_index, accumulator = accumulator)"
    ],
    "metadata": {
     "collapsed": false,
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -62,7 +64,7 @@
    ],
    "source": [
     "instructions = parse_input()\n",
-    "accumulator_result = get_accumulator(instructions[0])\n",
+    "accumulator_result = get_accumulator()\n",
     "print(f\"The value of the accumulator is {accumulator_result}\")"
    ],
    "metadata": {
