Finish day8 and refector get_accumlator to use it for part 1 and 2

--- a/Day8.ipynb
+++ b/Day8.ipynb
@@ -8,6 +8,14 @@
    },
    "outputs": [],
    "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
     "def parse_input():\n",
     "    instructions_list = []\n",
     "    with open(\"Input/Day8.txt\", \"r\") as file:\n",
@@ -15,33 +23,6 @@
     "            command_parts = line.split(\" \")\n",
     "            instructions_list.append({\"command\": command_parts[0], \"argument\": int(command_parts[1]), \"is_visited\": False})\n",
     "    return instructions_list\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "# Part 1\n",
-    "def get_accumulator(index: int = 0 ,accumulator: int = 0) -> int:\n",
-    "    instruction = instructions[index]\n",
-    "    if instruction[\"is_visited\"]:\n",
-    "        return accumulator\n",
-    "\n",
-    "    instruction[\"is_visited\"] = True\n",
-    "\n",
-    "    argument = instruction[\"argument\"]\n",
-    "    command = instruction[\"command\"]\n",
-    "    if command == \"acc\":\n",
-    "        accumulator += argument\n",
-    "        next_index = index+1\n",
-    "        return get_accumulator(index=next_index, accumulator = accumulator)\n",
-    "    elif command == \"jmp\":\n",
-    "        next_index = index + argument\n",
-    "        return get_accumulator(index=next_index, accumulator = accumulator)\n",
-    "    else:\n",
-    "        next_index = index + 1\n",
-    "        return get_accumulator(index=next_index, accumulator = accumulator)"
    ],
    "metadata": {
     "collapsed": false,
@@ -52,19 +33,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "def get_accumulator(instructions: List, index: int = 0 ,accumulator: int = 0) -> [int, int]:\n",
+    "    if index >= len(instructions):\n",
+    "        return accumulator\n",
+    "    instruction = instructions[index]\n",
+    "    if instruction[\"is_visited\"]:\n",
+    "        return accumulator\n",
+    "    elif index == len(instructions):\n",
+    "        return accumulator\n",
+    "\n",
+    "    instruction[\"is_visited\"] = True\n",
+    "\n",
+    "    argument = instruction[\"argument\"]\n",
+    "    command = instruction[\"command\"]\n",
+    "    if command == \"acc\":\n",
+    "        accumulator += argument\n",
+    "        next_index = index + 1\n",
+    "        return get_accumulator(instructions, index=next_index, accumulator = accumulator)\n",
+    "    elif command == \"jmp\":\n",
+    "        next_index = index + argument\n",
+    "        return get_accumulator(instructions, index=next_index, accumulator = accumulator)\n",
+    "    else:\n",
+    "        next_index = index + 1\n",
+    "        return get_accumulator(instructions, index=next_index, accumulator = accumulator)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value of the accumulator is 1584\n"
+      "The value of the accumulator is None\n"
      ]
     }
    ],
    "source": [
-    "instructions = parse_input()\n",
-    "accumulator_result = get_accumulator()\n",
+    "# Part 1\n",
+    "\n",
+    "instructions_input = parse_input()\n",
+    "accumulator_result = get_accumulator(instructions=instructions_input)\n",
     "print(f\"The value of the accumulator is {accumulator_result}\")"
    ],
    "metadata": {
@@ -76,9 +95,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# part 2\n",
+    "\n",
+    "def fix_instructions() -> int:\n",
+    "    accumulator = 0\n",
+    "    for index in range(len(instructions_input)):\n",
+    "        reseted_instructions = parse_input()\n",
+    "        command = reseted_instructions[index][\"command\"]\n",
+    "        if command == \"nop\":\n",
+    "            reseted_instructions[index][\"command\"] = \"jmp\"\n",
+    "        elif command == \"jmp\":\n",
+    "            reseted_instructions[index][\"command\"] = \"nop\"\n",
+    "            \n",
+    "        accumulator = get_accumulator(instructions=reseted_instructions)\n",
+    "\n",
+    "        if reseted_instructions[len(reseted_instructions) - 1][\"is_visited\"]:\n",
+    "            break\n",
+    "\n",
+    "    return accumulator\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -88,7 +127,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of the accumlator is: 920\n"
+     ]
+    }
+   ],
+   "source": [
+    "fixed_instructions_accumulator = fix_instructions()\n",
+    "print(f\"The result of the accumlator is: {fixed_instructions_accumulator}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
