--- a/Day9.ipynb
+++ b/Day9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def read_input():\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "xmas_numbers = read_input()"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def is_invalid_number(praemble: List, number: int) -> bool:\n",
@@ -65,18 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# Part 1\n",
     "\n",
     "def find_invalid_number():\n",
-    "\n",
     "    for index in range(len(xmas_numbers) - PREAMBLE_LENGTH):\n",
     "        preamble = xmas_numbers[index:index+PREAMBLE_LENGTH]\n",
     "        current_number = xmas_numbers[index+PREAMBLE_LENGTH]\n",
     "        if is_invalid_number(praemble=preamble, number=current_number):\n",
-    "            print(current_number)\n"
+    "            return current_number"
    ],
    "metadata": {
     "collapsed": false,
@@ -87,18 +86,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "756008079\n"
+      "The invalid number is 756008079\n"
      ]
     }
    ],
    "source": [
-    "find_invalid_number()"
+    "invalid_number = find_invalid_number()\n",
+    "print(f\"The invalid number is {invalid_number}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -109,9 +109,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# Part 2\n",
+    "def find_encryption_weakness() -> [int, int]:\n",
+    "    set_size = 2\n",
+    "    current_number = 0\n",
+    "    result_set = []\n",
+    "    while invalid_number != current_number:\n",
+    "        for index in range(len(xmas_numbers)):\n",
+    "            current_number = sum(xmas_numbers[index:index+set_size])\n",
+    "            if current_number == invalid_number:\n",
+    "                result_set =  sorted(xmas_numbers[index: index+set_size])\n",
+    "                break\n",
+    "        set_size += 1\n",
+    "    return result_set[0] + result_set[-1]"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -121,9 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [],
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93727241\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_set = find_encryption_weakness()\n",
+    "print(number_set)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -133,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
